# ids-basecamp-clearinghouse

./: .gitignore  .releaserc  404.html  CHANGELOG.md  Proposal.html  README.md  book.toml  generateJWT.js  index.html  old_README.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docs.yml  publish.yml  release-publish.yml  release.yml  rust.yml  test.yml
clearing-house-app/: Cargo.toml  Dockerfile  README.md  config.toml
clearing-house-app/certs/: daps.der
clearing-house-app/ch-lib/: Cargo.toml
clearing-house-app/ch-lib/src/: lib.rs
clearing-house-app/ch-lib/src/db/: mod.rs
clearing-house-app/ch-lib/src/model/: constants.rs  mod.rs
clearing-house-app/ch-lib/src/model/ids/: message.rs  mod.rs  request.rs  response.rs  test.rs  tests.rs
clearing-house-app/clearing-house-api/: .gitignore  Cargo.toml  Rocket.toml  config.yml  supervisord.conf
clearing-house-app/clearing-house-api/src/: clearing_house_api.rs  main.rs
clearing-house-app/clearing-house-api/tests/integration/: ch_api_client.rs  main.rs  process_client.rs  test_create_process.rs  test_get_pk.rs  test_log_message.rs  test_query_message.rs
clearing-house-app/clearing-house-api/tests/integration/json/: log_message.json  log_message_2.json  query_message.json  request_message.json
clearing-house-app/core-lib/: Cargo.toml
clearing-house-app/core-lib/src/: constants.rs  lib.rs  util.rs
clearing-house-app/core-lib/src/api/: auth.rs  crypto.rs  mod.rs
clearing-house-app/core-lib/src/api/client/: document_api.rs  keyring_api.rs  mod.rs
clearing-house-app/core-lib/src/db/: public_db.rs
clearing-house-app/core-lib/src/model/: crypto.rs  document.rs  mod.rs  process.rs
clearing-house-app/core-lib/tests/integration/: daps_api_client.rs  document_api_client.rs  keyring_api_client.rs  main.rs  token_validation.rs
clearing-house-app/document-api/: Cargo.toml  Rocket.toml
clearing-house-app/document-api/src/: doc_api.rs  main.rs
clearing-house-app/document-api/src/db/: bucket.rs  mod.rs  tests.rs
clearing-house-app/keyring-api/: Cargo.toml  Rocket.toml
clearing-house-app/keyring-api/src/: main.rs
clearing-house-app/keyring-api/src/api/: key_api.rs
clearing-house-app/keyring-api/src/db/: mod.rs
clearing-house-app/keyring-api/src/model/: crypto.rs
clearing-house-app/logging-service/: Cargo.toml  Rocket.toml  config.toml
clearing-house-app/logging-service/src/: config.rs  crypto.rs  logging_api.rs  main.rs  util.rs
clearing-house-app/logging-service/src/db/: doc_store.rs  docstore.rs  key_store.rs  keystore.rs  mod.rs  process_store.rs
clearing-house-app/logging-service/src/db/config/: doc_store.rs  keyring_store.rs  mod.rs  process_store.rs
clearing-house-app/logging-service/src/model/: claims.rs  constants.rs  crypto.rs  doc_type.rs  document.rs  errors.rs  mod.rs  process.rs  util.rs
clearing-house-app/logging-service/src/model/ids/: message.rs  mod.rs  request.rs
clearing-house-app/logging-service/src/ports/: doc_type_api.rs  logging_api.rs  mod.rs
clearing-house-app/logging-service/src/services/: document_service.rs  keyring_service.rs  logging_service.rs  mod.rs
clearing-house-app/migrations/: 20240102094054_init.down.sql  20240102094054_init.up.sql
clearing-house-app/src/: config.rs  crypto.rs  errors.rs  lib.rs  main.rs  util.rs
clearing-house-app/src/db/: doc_store.rs  key_store.rs  mod.rs  mongo_doc_store.rs  mongo_process_store.rs  postgres_document_store.rs  postgres_process_store.rs  process_store.rs
clearing-house-app/src/db/config/: doc_store.rs  keyring_store.rs  mod.rs  process_store.rs
clearing-house-app/src/model/: claims.rs  constants.rs  crypto.rs  doc_type.rs  document.rs  errors.rs  mod.rs  process.rs  util.rs
clearing-house-app/src/model/ids/: message.rs  mod.rs  request.rs
clearing-house-app/src/ports/: doc_type_api.rs  logging_api.rs  mod.rs
clearing-house-app/src/services/: document_service.rs  keyring_service.rs  logging_service.rs  mod.rs
clearing-house-app/tests/: README.md  create_process.rs  log.rs  public_key.rs
clearing-house-app/tests/common/: mod.rs
clearing-house-edc/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clearing-house-edc/.github/workflows/: docker-publish.yml
clearing-house-edc/core/: build.gradle.kts
clearing-house-edc/extensions/multipart/: build.gradle.kts
clearing-house-edc/launchers/connector/: Dockerfile  build.gradle.kts
clearing-house-edc/launchers/connector-local/: build.gradle.kts  config.properties
clearing-house-edc/launchers/connector-prod/: Dockerfile  build.gradle.kts
clearing-house-edc/resources/: edc-checkstyle-config.xml
clearing-house-processors/: .gitignore  README.md  bnd.bnd  build.gradle.kts  libraryVersions.yaml  settings.gradle.kts
clearing-house-processors/gradle/: libs.versions.toml
content/: migrations.html  quick_start.html  references.html
content/admin-guide/: ch-app_installation.html  ch-edc_installation.html  installation.html  maintenance.html  quick_start.html  tests.html
content/internals/: architecture.html  communication.html  functionality.html
content/references/: API.html
data/: config.yml
doc/: SUMMARY.md  clearing-house-api.md
doc/images/: LogMessage.drawio  ch_container_dependencies.puml
doc/proposals/: communication.md
docker/: application.yml  clearing-house-api-multistage.Dockerfile  clearing-house-api.Dockerfile  daps_cachain.crt  docker-compose.yml  document-api-multistage.Dockerfile  document-api.Dockerfile  keyring-api-multistage.Dockerfile  keyring-api.Dockerfile  logging-service-multistage.Dockerfile  logging-service.Dockerfile
docs/: Clearinghouse.md  Proposal.md  SUMMARY.md  old_README.md
docs/content/: migrations.md  quick_start.md
docs/content/admin-guide/: deployment.md  (+4 more)
docs/images/: QueryMessage.drawio
tests/: load.js  smoke.js
tests/util/: createProcess.js  header.js  logMessage.js
(+161 files in other folders)
