[package]
name = "clearing-house-app"
version = "0.10.0"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
    "Maximilian Schönenberg <mschoenenberg@truzzt.eu>"
]
edition = "2021"

[dependencies]
# JWT
biscuit = "0.6.0"
# Database
mongodb = { version = ">= 2.6.1" , features = ["openssl-tls"]}
# HTTP-Server
rocket = { version = "0.5.0-rc.1", features = ["json"] }
# Serialization
serde = { version = ">1.0.184", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
# Time handling
chrono = { version = "0.4.26", features = ["serde", "clock", "std"], default-features = false }
hex = "0.4.3"
# Encryption and hashing
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
hkdf = "0.12.3"
sha2 = "0.10.7"
blake2-rfc = "0.2.18"
ring = "0.16.20"
# Fixed size arrays
generic-array = "0.14.7"
# Config reader
config = { version = "0.13.3", default-features = false, features = ["toml"] }
# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# Random number generation
rand = "0.8.5"
# lazy initialization of static variables
once_cell = "1.18.0"
# Base64 encoding
base64 = "0.21.2"
# UUID generation
uuid = { version = "1.4.1", features = ["serde"] }
# Big integer handling (RSA key modulus and exponent)
num-bigint = "0.4.3"
# Generating fingerprint of RSA keys
openssh-keys = "0.6.2"

[dev-dependencies]
# Controlling execution of unit test cases, which could interfere with each other
serial_test = "2.0.0"
# Tempfile creation for testing
tempfile = "3.8.0"
