[package]
name = "ch-lib"
version = "0.7.6"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2018"

[dependencies]
biscuit = { git = "https://github.com/lawliet89/biscuit", branch = "master" }
core-lib = { git = "https://github.com/Fraunhofer-AISEC/ids-clearing-house-core.git", tag = "v0.7.7" }
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.4"
fern = "0.5"
log = "0.4"
mongodb = "2.0.1"
num-bigint = "0.4.3"
openssh-keys = "0.5.0"
ring = "0.16.20"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
