[package]
name = "core-lib"
version = "0.10.0"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2021"

[dependencies]
aes = "0.6.0"
aes-gcm-siv = "0.9.0"
biscuit = "0.6.0"
base64 = "0.9.3"
blake2-rfc = "0.2.18"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.4"
fern = "0.5"
figment = { version = "0.10", features = ["yaml", "env"] }
generic-array = "0.14.4"
hex = "0.4.2"
log = "0.4"
mongodb ="2.3.0"
num-bigint = "0.4.3"
openssh-keys = "0.5.0"
percent-encoding = "2.1.0"
reqwest = { version="0.11", features = ["default", "json", "blocking"]}
ring = "0.16.20"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
