[package]
name = "logging-service"
version = "0.10.0"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2021"

[dependencies]
biscuit = { git = "https://github.com/lawliet89/biscuit", branch = "master" }
core-lib = { path = "../core-lib" }
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.1"
fern = "0.5"
log = "0.4"
mongodb ="2.3.0"
percent-encoding = "2.1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1"
hex = "0.4.3"
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
hkdf = "0.12.3"
sha2 = "0.10.7"
generic-array = "0.14.7"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
once_cell = "1.18.0"
